...
    <string name="app_name">I2P</string>
    <string name="desc_i2p_logo">I2P logo</string>
    <string name="choose_language">Choose language</string>
    <string name="welcome_new_install">Welcome to I2P! This app is ALPHA software and it does not provide strong anonymity. Please read the release notes and license information.</string>
    <string name="welcome_new_version">New version installed. Please read the release notes. Version:</string>

    <string name="label_tunnels">Tunnels</string>
    <string name="label_status">Status</string>
    <string name="label_console">Console</string>
    <string name="label_addresses">Addresses</string>
    <string name="label_addressbook">Addressbook</string>
    <string name="label_i2ptunnel" translatable="false">@string/label_tunnels</string>
    <string name="label_i2ptunnel_client">Client tunnels</string>
    <string name="label_i2ptunnel_server">Server tunnels</string>
    <string name="label_logs">Logs</string>
    <string name="label_error_logs">Error Logs</string>
    <string name="label_news">News</string>
    <string name="label_peers_status">Peers</string>
    <string name="label_release_notes">Release Notes</string>
    <string name="label_licenses">Licenses</string>
    <string name="label_browse">Browse</string>
    <string name="label_graphs">Graphs</string>

    <string name="button_router_off">Long press to start I2P</string>
    <string name="button_router_on">I2P is running (long press to stop)</string>
    <string name="button_router_graceful">I2P will shut down in %s</string>
    <string name="button_shutdown_now">Long press to stop now</string>
    <string name="button_cancel_graceful">Long press to cancel shutdown</string>
...

    <string name="news_last_updated">News last updated %s ago</string>
    <string name="news_last_checked">News last checked %s ago</string>
    <string name="news_updated">News Updated</string>
    <string name="view_news">Touch to view latest I2P news</string>

    <string name="router_not_running">The router is not running.</string>
    <string name="router_shutting_down">The router is shutting down.</string>
    <string name="stats_not_ready">The statistics manager is not ready yet. Try again later.</string>
    <string name="select_an_address">Select an address.</string>

    <string name="no_graphs_configured">No graphs have been configured. You can choose statistics to graph in the settings menu. Any changes will take effect after 60 seconds.</string>
    <string name="configure_graphs">Configure graphs</string>
...
    <string name="stats_lag">Job Lag</string>
    <string name="stats_delay">Message Delay</string>

    <string name="copied_base32_system_notification_title">Base32 copied to clipboard</string>
    <string name="copied_base32_system_notification_body">The address of your I2P tunnel has been copied to the clipboard.</string>

    <string name="menu_settings">Settings</string>
    <string name="settings_enable">Enable</string>
    <string name="settings_desc_subscriptions">Subscription URLs</string>
    <string name="settings_label_bandwidth_net">Bandwidth and network</string>
    <string name="settings_label_startOnBoot">Start I2P on Boot</string>
    <string name="settings_desc_startOnBoot">Automatically connect to I2P when your Android device starts up</string>
    <string name="settings_label_bandwidth">Bandwidth</string>
    <string name="settings_label_bw_inbound">Inbound speed</string>
    <string name="settings_desc_bw_inbound">Maximum inbound speed</string>
    <string name="settings_label_bw_outbound">Outbound speed</string>
    <string name="settings_desc_bw_outbound">Maximum outbound speed</string>
...
    <string name="settings_desc_maxPartTunnels">Maximum tunnels to participate in (default=20)</string>
    <string name="settings_dialog_maxPartTunnels">Maximum tunnels to participate in</string>
    <string name="settings_label_sharePercent">Share percentage</string>
    <string name="settings_desc_sharePercent">Percentage of bandwidth to share (default=80)</string>
    <string name="settings_dialog_sharePercent">Percentage of bandwidth to share</string>
    <string name="settings_desc_upnp">Open firewall ports automatically</string>
    <string name="settings_label_logging">Logging</string>
    <string name="settings_label_default_log_level">Default log level</string>
    <string name="settings_label_appearance">Appearance</string>
    <string name="settings_label_language">Language</string>
    <string name="settings_default">Default</string>
    <string name="settings_label_advanced">Advanced</string>
    <string name="settings_label_showStats">Router statistics</string>
    <string name="settings_summ_showStats">Display advanced stats in main console</string>
    <string name="settings_label_transports">Transports</string>
    <string name="settings_label_maxConns">Max connections</string>
    <string name="settings_label_i2cp">I2CP interface</string>
    <string name="settings_desc_i2cp">Allow third-party apps to create tunnels using I2CP (requires router restart)</string>
    <string name="settings_label_sam">SAM interface</string>
    <string name="settings_desc_sam">Allow third-party apps to create tunnels using SAM (requires router restart)</string>
    <string name="settings_confirm_sam">An application is trying to make a SAM connection.</string>
...
    <string name="about_gitlab">Want to suggest a feature or fix a bug? make a Merge Request on the Android Gitlab:</string>
    <string name="url_gitlab" translatable="false">https://i2pgit.org/i2p-hackers/i2p.android.base | http://git.idk.i2p/i2p-hackers/i2p.android.base</string>

    <string name="menu_help">Help</string>
    <string name="general">General</string>

    <string name="label_router">Public addresses</string>
    <string name="label_private">Private addresses</string>
    <string name="addressbook_is_empty">Addressbook is empty</string>
    <string name="addressbook_search_header">%s found</string>

    <string name="addressbook_add_wizard_k_name">Name</string>
    <string name="addressbook_add_wizard_k_destination">Destination</string>
...
