...
        android:layout_height="wrap_content"
        android:contentDescription="@string/desc_i2p_logo"
        android:scaleType="centerInside"
        android:src="@drawable/routerlogo_0" />

    <ToggleButton
        android:id="@+id/router_onoff_button"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:textOff="@string/button_router_off"
        android:textOn="@string/button_router_on" />

    <ScrollView
        android:id="@+id/main_scrollview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:padding="10dp"
        android:scrollbarStyle="outsideInset" >

...
