<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:padding="10px"
    android:scrollbarStyle="outsideInset"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Addressbook Settings"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Subscriptions"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/subscriptions_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:maxLines="@integer/min_lines"
                android:minLines="@integer/min_lines" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/button_save_subscriptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Save subscriptions.txt" />

        </FrameLayout>

    </LinearLayout>

</ScrollView>
